<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/group_main">
        <item
            android:id="@+id/splitTun"
            android:icon="@drawable/ic_split_black"
            android:title="@string/split_tun_drawer" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/setting_drawer" />
        <item
            android:id="@+id/info"
            android:icon="@drawable/ic_whatshot_24dp"
            android:title="حساب من" />
    </group>

    <group android:id="@+id/group_id2">
        <item
            android:id="@+id/getUpdate"
            android:icon="@drawable/ic_uptodown"
            android:title="بروزرسانی برنامه"/>
        <item
            android:id="@+id/feedback"
            android:icon="@drawable/ic_feedback_24dp"
            android:title="@string/feedback_drawer" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_exit_black"
            android:title="@string/logout_drawer" />
    </group>

</menu>
