<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constLayoutFAQMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FAQActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/linearLayoutFAQMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayoutTitleBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_faq_go_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/lo_16dpGrid">

                    <ImageView
                        android:id="@+id/iv_faq_goback"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_gravity="bottom"
                        android:layout_marginEnd="@dimen/lo_4dpGrid"
                        android:background="@drawable/ic_go_back"
                        android:contentDescription="@string/todo" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_usage_faq_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="@dimen/lo_16dpGrid"
                    android:gravity="center"
                    android:text="@string/tv_usage_faq_title"
                    android:textSize="18sp" />


                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/lo_16dpGrid"
                    android:background="@drawable/logo_effected"
                    android:contentDescription="@string/todo" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayoutQNoProcess"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/lo_16dpGrid"
                android:layout_marginEnd="@dimen/lo_16dpGrid"
                android:layout_marginBottom="@dimen/lo_16dpGrid"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_usage_faq_process_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_usage_faq_process_1"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/ts_Body1"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_thin"/>

                <TextView
                    android:id="@+id/tv_usage_faq_process_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_usage_faq_process_2"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/ts_Body2"
                    android:textStyle="italic"/>
            </LinearLayout>

            <!-- FAQ 1 -->
            <LinearLayout
                android:id="@+id/LinearLayoutQ1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/lo_16dpGrid"
                android:layout_marginEnd="@dimen/lo_16dpGrid"
                android:layout_marginBottom="@dimen/lo_16dpGrid"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_usage_faq_q1_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_usage_faq_q1_1"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/ts_Body1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_usage_faq_q1_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_usage_faq_q1_2"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/ts_Body2"
                    android:textStyle="italic"/>
            </LinearLayout>

            <!-- FAQ 2 -->
            <LinearLayout
                android:id="@+id/LinearLayoutQ2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/lo_16dpGrid"
                android:layout_marginEnd="@dimen/lo_16dpGrid"
                android:layout_marginBottom="@dimen/lo_16dpGrid"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_usage_faq_q2_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_usage_faq_q2_1"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/ts_Body1"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/lo_8dpGrid"
                    android:layout_marginBottom="@dimen/lo_8dpGrid"
                    android:background="@color/colorStatsBlue"
                    android:orientation="vertical">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/lo_16dpGrid"
                        android:layout_marginBottom="@dimen/lo_16dpGrid"
                        android:background="@drawable/button_connect"
                        android:elevation="@dimen/lo_8dpGrid"
                        android:enabled="false"
                        android:paddingStart="@dimen/lo_24dpGrid"
                        android:paddingEnd="@dimen/lo_24dpGrid"
                        android:text="@string/connect"
                        android:textColor="@color/colorTextHint"
                        android:textSize="@dimen/ts_H6" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_usage_faq_q2_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tv_usage_faq_q2_2"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/ts_Body2"
                    android:textStyle="italic"/>
            </LinearLayout>

            <!-- FAQ 3 -->
            <LinearLayout
                android:id="@+id/LinearLayoutQ3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/lo_16dpGrid"
                android:layout_marginEnd="@dimen/lo_16dpGrid"
                android:layout_marginBottom="@dimen/lo_16dpGrid"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_usage_faq_q3_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_usage_faq_q3_1"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/ts_Body1"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/lo_8dpGrid"
                    android:layout_marginBottom="@dimen/lo_8dpGrid"
                    android:background="@color/colorStatsBlue"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/lo_16dpGrid"
                        android:layout_marginBottom="@dimen/lo_16dpGrid"
                        android:background="@drawable/ic_flag_united_states"
                        android:contentDescription="@string/todo" />


                </LinearLayout>

                <TextView
                    android:id="@+id/tv_usage_faq_q3_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tv_usage_faq_q3_2"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/ts_Body2"
                    android:textStyle="italic"/>
            </LinearLayout>

            <!-- FAQ 4 -->
            <LinearLayout
                android:id="@+id/LinearLayoutQ4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/lo_16dpGrid"
                android:layout_marginEnd="@dimen/lo_16dpGrid"
                android:layout_marginBottom="@dimen/lo_16dpGrid"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_usage_faq_q4_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_usage_faq_q4_1"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/ts_Body1"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_usage_faq_q4_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_usage_faq_q4_2"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/ts_Body2"
                    android:textStyle="italic"/>
            </LinearLayout>

            <!-- FAQ V2ray -->
            <LinearLayout
                android:id="@+id/LinearLayoutQV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/lo_16dpGrid"
                android:layout_marginEnd="@dimen/lo_16dpGrid"
                android:layout_marginBottom="@dimen/lo_16dpGrid"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_usage_faq_qv_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_usage_faq_qv_1"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/ts_Body1"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/lo_8dpGrid"
                    android:layout_marginBottom="@dimen/lo_8dpGrid"
                    android:background="@color/colorStatsBlue"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/lo_16dpGrid"
                        android:layout_marginBottom="@dimen/lo_16dpGrid"
                        android:background="@drawable/ic_settings_black"
                        android:contentDescription="@string/todo" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_usage_faq_qv_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tv_usage_faq_qv_2"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/ts_Body2" />
            </LinearLayout>

            <!-- FAQ 5 -->
            <LinearLayout
                android:id="@+id/LinearLayoutQ5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/lo_16dpGrid"
                android:layout_marginEnd="@dimen/lo_16dpGrid"
                android:layout_marginBottom="@dimen/lo_16dpGrid"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_usage_faq_q5_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_usage_faq_q5_1"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/ts_Body1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_usage_faq_q5_0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_usage_faq_q5_0"
                    android:textColor="@color/colorText"
                    android:textSize="12sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tv_usage_faq_q5_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_usage_faq_q5_2"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/ts_Body2"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_usage_faq_q5_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_usage_faq_q5_3"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/ts_Body2"
                    android:textStyle="italic"/>

                <TextView
                    android:id="@+id/tv_usage_faq_q5_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_usage_faq_q5_4"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/ts_Body2"
                    android:textStyle="italic" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLineUsageList" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/lo_16dpGrid"
                android:layout_marginBottom="@dimen/lo_16dpGrid"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_usage_app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/lo_8dpGrid"
                        android:layout_marginEnd="@dimen/lo_8dpGrid"
                        android:gravity="center"
                        android:text="@string/tv_usage_app_name"
                        android:textColor="#777777"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_usage_app_copyright"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/lo_8dpGrid"
                        android:layout_marginEnd="@dimen/lo_8dpGrid"
                        android:gravity="center"
                        android:text="@string/tv_usage_app_copyright"
                        android:textColor="#777777"
                        android:textSize="14sp" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>