<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/colorBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    android:paddingTop="@dimen/lo_16dpGrid"
    android:paddingBottom="@dimen/lo_16dpGrid">

    <ImageView
        android:id="@+id/iv_flag"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/lo_16dpGrid"
        android:src="@drawable/ic_flag_italy"
        android:contentDescription="@string/iv_flag" />

    <TextView
        android:id="@+id/tv_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/lo_16dpGrid"
        android:text="@string/tv_country"
        android:textColor="@color/colorText"
        android:textSize="@dimen/ts_Body1"
        android:textStyle="italic"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/iv_signal_strength"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/lo_16dpGrid"
        android:layout_marginLeft="@dimen/lo_16dpGrid"
        android:layout_marginEnd="@dimen/lo_16dpGrid"
        android:layout_marginRight="@dimen/lo_16dpGrid"
        android:background="@drawable/ic_signal_medium"
        android:contentDescription="@string/todo" />

</LinearLayout>


